# Chess

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Statistics.cpp  Statistics.h
tests/: CMakeLists.txt  StatisticsTests.cpp
